Attempt to fix footer on iOS

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -66,7 +66,9 @@
 }
 
 .mdl-layout__content {
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: column;
   flex-direction: column;
 }
 
